--- a/secciones/vehiculos.html
+++ b/secciones/vehiculos.html
@@ -11,6 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </head>
 <body>
+    
     <!-- nav bar -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
@@ -42,6 +43,7 @@
           </nav>
     </header>
     </header>
+
     <main>
         <!-- seccion vehiculos -->
         <section >
@@ -53,7 +55,7 @@
                             <h4> FORD TERRITORY </h4>
                                 <p>PRECIO $9.700.000</p>
                                 <label for="">
-                                    <input type="button" value="Comprar ahora" class="button-carta-ford">
+                                    <input type="button" value="Mas información" class="button-carta-ford">
                                 </label>
                 </article>
             <article class="carta-ford">
@@ -62,7 +64,7 @@
                             <h4> FORD MONDEO </h4>
                                     <p>PRECIO  $6.000.000</p>
                                     <label for="">
-                                        <input type="button" value="Comprar ahora" class="button-carta-ford">
+                                        <input type="button" value="Mas información" class="button-carta-ford">
                                     </label>
             </article>
                 <article class="carta-ford">
@@ -71,10 +73,11 @@
                             <h4>FORD KUGA</h4>
                                 <p>PRECIO  $7.500.000</p>
                                 <label for="">
-                                    <input type="button" value="Comprar ahora" class="button-carta-ford">
+                                    <input type="button" value="Mas información" class="button-carta-ford">
                                 </label>
                 </article>    
             </div>
+
             <!-- seccion camionetas -->
             <h1>CAMIONETAS</h1>
             <div class="container">
@@ -84,7 +87,7 @@
                             <h4> FORD RAPTOR </h4>
                                 <p>PRECIO $20.900.000</p>
                                 <label for="">
-                                    <input type="button" value="Comprar ahora" class="button-carta-ford">
+                                    <input type="button" value="Mas información" class="button-carta-ford">
                                 </label>
                 </article>
             <article class="carta-ford">
@@ -93,7 +96,7 @@
                             <h4> FORD BRONCO </h4>
                                     <p>PRECIO  $17.000.000</p>
                                     <label for="">
-                                        <input type="button" value="Comprar ahora" class="button-carta-ford">
+                                        <input type="button" value="Mas información" class="button-carta-ford"> 
                                     </label>
             </article>
                 <article class="carta-ford">
@@ -102,12 +105,13 @@
                             <h4>FORD MAVERICK</h4>
                                 <p>PRECIO  $22.500.000</p>
                                 <label for="">
-                                    <input type="button" value="Comprar ahora" class="button-carta-ford">
+                                    <input type="button" value="Mas información" class="button-carta-ford">
                                 </label>
                 </article>
             </div>
         </section>
     </main>
+
     <footer>
         <footer>
             <!-- whatsapp -->
@@ -145,5 +149,6 @@
                 alt="logo-facebook.png"
             /></a>
           </footer>
+        <script src="js/main.js"></script>
 </body>
 </html>
