--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav c- ms-auto me-5 ">
+                    <ul class="navbar-nav c- m-auto">
                         <li class="nav-item">
                             <a class="nav-link   active  " aria-current="page" href="index.html">Pagina principal</a>
                         </li>
@@ -37,8 +37,17 @@
                             <a class="nav-link " href="./secciones/dudasyconsultas.html">Dudas y consultas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="./secciones/preguntas.html"> Preguntas frecuentes </a>
+                            <a class="nav-link " href="./secciones/preguntas.html" id="preguntasFrecuentes"> Preguntas frecuentes </a>
                         </li>
+                        <form class="d-flex ms-2" role="search">
+                            <input class="form-control ms-5" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success ms-2 boton-buscar" type="submit">Buscar</button>
+                          </form>
+                        
+                          <li class="nav-item">
+                            <a class="nav-link billetera" href="#"> Saldo:  <div id="valor"> $ </div></a>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -67,7 +76,7 @@
                     <img src="./Imagenes y videos/ford-mondeo.jpg" alt="Ford-Mondeo.img" id=" fordMondeo" class="cartas-autos-ford">
                     <hr>
                     <h4> FORD MONDEO </h4>
-                    <p>PRECIO  $6.000.000</p>
+                    <p id="Precio" ></p>
                     <label for="">
                         <input type="button" value="Mas información" class="button-carta-ford" onclick="hacerClick()">
                     </label>
@@ -181,9 +190,11 @@
             alt="logo-facebook.png"
             /></a>
         </footer>
-        <meta name="keywords" content="Vehiculos, pick up, Ford, Raptor, 119 años">
-        <meta name="description" content="Con mas de 119 años en el rubro, nos encargamos de que te lleves un vehiculo de primera calidad ¿Te lo vas a perder? "/>
+        <script src="./js/main.js"></script>
+        <!-- <meta name="keywords" content="Vehiculos, pick up, Ford, Raptor, 119 años"> -->
+        <!-- <meta name="description" content="Con mas de 119 años en el rubro, nos encargamos de que te lleves un vehiculo de primera calidad ¿Te lo vas a perder? "/> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <script src="js/main.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <script src="./js/sweetAlert.js"></script>
     </body>
     </html>
