--- a/secciones/PaginaCompra.html
+++ b/secciones/PaginaCompra.html
@@ -7,12 +7,8 @@
     <link rel="stylesheet" href="../css/index.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="../css/index.css" >
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
 </head>
 <body>
     <!-- nav bar -->
@@ -25,21 +21,29 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav c- ms-auto me-5 ">
-                        <li class="nav-item">
-                            <a class="nav-link  " aria-current="page" href="../index.html">Pagina principal</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  " aria-current="page" href="../secciones/vehiculos.html">Vehiculos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " href="../secciones/nosotros.html">Sobre nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " href="../secciones/dudasyconsultas.html">Dudas y consultas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  " href="../secciones/preguntas.html"> Preguntas frecuentes </a>
-                        </li>
+                      <li class="nav-item">
+                        <a class="nav-link  " aria-current="page" href="../index.html">Pagina principal</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="./vehiculos.html">Vehiculos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="./nosotros.html">Sobre nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="./dudasyconsultas.html">Dudas y consultas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="./preguntas.html"> Preguntas frecuentes </a>
+                    </li>
+                    <form class="d-flex ms-2" role="search">
+                        <input class="form-control ms-5" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success ms-2 boton-buscar" type="submit">Buscar</button>
+                      </form>
+                    
+                      <li class="nav-item">
+                        <a class="nav-link billetera" href="#"> Saldo:  <div id="valor"> $ </div></a>
+                    </li>
                     </ul>
                 </div>
             </div>
@@ -133,5 +137,7 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"></script>
       <script src="../js/main.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <script src="../js/sweetAlert.js"></script>
 </body>
 </html>
