--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -13,34 +13,42 @@
 <body>
     <!-- nav bar -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
-            <div class="container-fluid ">
-              <a class="navbar-brand" href="#"><img src="../Imagenes y videos/ford.jpg" class="logo-ford"alt="" ></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
+          <div class="container-fluid ">
+            <a class="navbar-brand" href="#"><img src="../Imagenes y videos/ford.jpg" class="logo-ford"alt="" ></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav c- ms-auto me-5 ">
+                  <ul class="navbar-nav c- ms-auto me-5 ">
                     <li class="nav-item">
-                        <a class="nav-link  " aria-current="page" href="../index.html">Pagina principal</a>
-                    </li>
-                  <li class="nav-item">
-                    <a class="nav-link  " aria-current="page" href="../secciones/vehiculos.html">Vehiculos</a>
+                      <a class="nav-link  " aria-current="page" href="../index.html">Pagina principal</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active  " href="../secciones/nosotros.html">Sobre nosotros</a>
+                      <a class="nav-link" aria-current="page" href="./vehiculos.html">Vehiculos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="../secciones/dudasyconsultas.html">Dudas y consultas</a>
+                      <a class="nav-link   active  " href="./nosotros.html">Sobre nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link  " href="../secciones/preguntas.html"> Preguntas frecuentes </a>
+                      <a class="nav-link " href="./dudasyconsultas.html">Dudas y consultas</a>
                   </li>
-                </ul>
+                  <li class="nav-item">
+                      <a class="nav-link " href="./preguntas.html"> Preguntas frecuentes </a>
+                  </li>
+                  <form class="d-flex ms-2" role="search">
+                      <input class="form-control ms-5" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success ms-2 boton-buscar" type="submit">Buscar</button>
+                    </form>
+                  
+                    <li class="nav-item">
+                      <a class="nav-link billetera" href="#"> Saldo:  <div id="valor"> $ </div></a>
+                  </li>
+                  </ul>
               </div>
-            </div>
-          </nav>
-    </header>
+          </div>
+      </nav>
+  </header>
    <main>
 
     <div class="contenedor__texto__informativo__ford">
@@ -151,5 +159,8 @@
             alt="logo-facebook.png"
         /></a>
       </footer>
+      <script src="../js/main.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <script src="../js/sweetAlert.js"></script>
 </body>
 </html>
